--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,150 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.vg</groupId>
-  <artifactId>ui</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>com.vg</groupId>
+	<artifactId>ui</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>ui</name>
-  <url>http://maven.apache.org</url>
+	<name>ui</name>
+	<url>http://maven.apache.org</url>
+	<scm>
+		<url>https://github.com/videogorillas/ui</url>
+		<connection>scm:git:https://github.com/videogorillas/ui.git</connection>
+		<developerConnection>scm:git:https://github.com/videogorillas/ui.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+	<repositories>
+		<repository>
+			<id>vg-corporate-repo</id>
+			<url>http://kote.videogorillas.com/m2repo/</url>
+		</repository>
+		<repository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+		</repository>
+	</repositories>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<stjs.version>3.3.2</stjs.version>
+		<stjs.plugin.version>3.3.2</stjs.plugin.version>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.st-js</groupId>
+				<artifactId>stjs-maven-plugin</artifactId>
+				<version>${stjs.plugin.version}</version>
+				<executions>
+					<execution>
+						<id>stjs main</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<pack>true</pack>
+							<generateSourceMap>true</generateSourceMap>
+							<generatedSourcesDirectory>target/classes</generatedSourcesDirectory>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<includes>
+						<include>com/vg/ui/**/*.java</include>
+					</includes>
+					<!-- buildOutputDirectory>target/classes/myjs</buildOutputDirectory -->
+				</configuration>
+			</plugin>
+		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!-- configuration for maven plugin 1.0.0 for automatic code generation -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.st-js</groupId>
+										<artifactId>
+											stjs-maven-plugin
+										</artifactId>
+										<versionRange>
+											[${stjs.plugin.version},)
+										</versionRange>
+										<goals>
+											<goal>generate</goal>
+											<goal>generate-test</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute>
+											<runOnIncremental>true</runOnIncremental>
+										</execute>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>scripts</directory>
+			</resource>
+		</resources>
+	</build>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.amazonaws</groupId>
+				<artifactId>aws-java-sdk-bom</artifactId>
+				<version>1.11.165</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+            <groupId>org.st-js</groupId>
+            <artifactId>server</artifactId>
+            <version>${stjs.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.st-js.bridge</groupId>
+            <artifactId>html</artifactId>
+            <version>5.0.bv41-111</version>
+        </dependency>
+            <dependency>
+            <groupId>com.vg</groupId>
+            <artifactId>rxjs-bridge</artifactId>
+            <version>4.1.0-22</version>
+        </dependency>
+        <dependency>
+            <!-- https://github.com/videogorillas/react-toolbox-bridge -->
+            <groupId>com.vg</groupId>
+            <artifactId>react-toolbox-bridge</artifactId>
+            <version>1.2.1-10</version>
+        </dependency>
+	</dependencies>
 </project>
