settings and deps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,14 @@
     "target": "es6",
     "jsx": "react",
     "allowJs": true
+  },
+  "rulesDirectory": [
+    "node_modules/rxjs-tslint"
+  ],
+  "rules": {
+    "rxjs-collapse-imports": true,
+    "rxjs-pipeable-operators-only": true,
+    "rxjs-no-static-observable-methods": true,
+    "rxjs-proper-imports": true
   }
 }
